<resources>
    <string name="app_name">Leamonax</string>
    <string name="network_is_unavailable">Network is unavailable</string>
    <string name="save_note_failed">Save note failed</string>
    <string name="sync_notes_failed">Sync notes failed</string>
    <string name="saving_note">Saving note</string>
    <string name="save_to_server">save to server</string>
    <string name="revert">Revert</string>
    <string name="reverting">Reverting</string>
    <string name="edit">Edit</string>
    <string name="link">Link</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_to_delete_note">Are you sure to delete %s?</string>
    <string name="delete_note">Delete note</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_notebook">Add notebook</string>
    <string name="recent_notes">Recent notes</string>
    <string name="clear_data">Clear data</string>
    <string name="are_you_sure_to_delete_all_data_in_this_account">Are you sure to delete all notes and notebooks in this account?</string>
    <string name="change_user_name">Change user name</string>
    <string name="change_password">Change password</string>
    <string name="log_out">Log out</string>
    <string name="are_your_sure_to_log_out">Are you sure to log out?</string>
    <string name="choose_editor">Choose editor</string>
    <string name="clear_data_successful">Clear data successful</string>
    <string name="change_user_name_failed">Change user name failed</string>
    <string name="change_password_failed">Change password failed</string>
    <string name="choose_notebook">Choose notebook</string>
    <string name="delete_note_failed">Delete note failed</string>
    <string name="email_or_password_incorrect">Email or password is incorrect</string>
    <string name="network_error">Network error</string>
    <string name="untitled">Untitled</string>
    <string name="time_yesterday">Yesterday %s</string>
    <string name="use_leanote_host">Use Leanote.com</string>
    <string name="use_custom_host">Use custom host</string>
    <string name="public_note">Public note</string>
    <string name="notebook">Notebook</string>
    <string name="tags">Tags</string>
    <string name="host">Host</string>
    <string name="avatar">Avatar</string>
    <string name="email">Email</string>
    <string name="user_name">User name</string>
    <string name="editor">Editor</string>
    <string name="image_size">Image size</string>
    <string name="password">Password</string>
    <string name="host_address">Host address</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="title">title</string>
    <string name="changed">Changed</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="host_address_is_incorrect">Host address is incorrect</string>
    <string name="thanks">Thanks</string>
    <string name="license">License</string>
    <string name="version">Version</string>
    <string name="about">About</string>
    <string name="preview">Preview</string>
    <string name="change_password_successful">Change password successful</string>
    <string name="change_user_name_successful">Change user name successful</string>
    <string name="search">Search</string>
    <string name="notebooks">Notebooks</string>
    <string name="illegal_host">Illegal host, please check again</string>
    <string name="clear">Clear</string>
    <string name="multiple_links">Multiple links</string>
    <string name="apply">Apply</string>
    <string name="import_from_html">Import from HTML</string>
    <string name="parse_error">Parse error</string>
    <string name="parsing_html">Parsing HTML</string>
    <string name="select_notebook">Select notebook</string>
    <string name="feedback">Feedback</string>
    <string name="sign_up">Sign up</string>
    <string name="note_not_found">Note not found, please try again</string>
    <string name="check_upgrade_error">An error occurs while checking latest version, please try again</string>
    <string name="checking_upgrade">Checking latest version, please wait</string>
    <string name="click_to_install">Click to install</string>
    <string name="click_to_retry">Click to retry</string>
    <string name="click_to_view">Click to view</string>
    <string name="continue_download">Continue download</string>
    <string name="continue_text">Continue</string>
    <string name="download_error">Download failed</string>
    <string name="download_successful">Dowload finished</string>
    <string name="downloading">Dowloading</string>
    <string name="what_s_new">What\'s new</string>
    <string name="file_size">File size</string>
    <string name="have_new_version">Have new version</string>
    <string name="install">Install</string>
    <string name="network_prompt">Network prompt</string>
    <string name="next_time">Next time</string>
    <string name="retry">Retry</string>
    <string name="should_continue_download">You already switch to mobile network, would you like to continue download?</string>
    <string name="update_time">Update time</string>
    <string name="upgrade_now">Upgrade now</string>
    <string name="your_are_the_latest_version">You are using latest version</string>
    <string name="cant_open_url">Can\'t open this url</string>
    <string name="retrieve_password">Retrieve password</string>
</resources>
