<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#eeeeee">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#2b90cf"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_login_pane"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/round_corner_bg"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:inputType="textEmailAddress"
            android:layout_marginTop="10dp"
            android:background="@drawable/selector_edittext_bg"
            android:drawableLeft="@mipmap/icon_number"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="lengyue@apkdv.com"
            android:hint="Email"
            android:maxLines="1"
            android:minHeight="45dp"
            android:paddingLeft="15dp"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="53542468awdz"
            android:background="@drawable/selector_edittext_bg"
            android:drawableLeft="@mipmap/icon_password"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:hint="Password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:minHeight="45dp"
            android:paddingLeft="15dp"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/et_custom_host"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/selector_edittext_bg"
            android:drawableLeft="@mipmap/icon_host"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:hint="@string/host_address"
            android:maxLines="1"
            android:minHeight="45dp"
            android:paddingLeft="15dp"
            android:textSize="15sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#f3f3f3"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#f7f7f7">

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textColor="#999999"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="5dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/btn_login_in_bg"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textColor="@android:color/white"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:layout_toLeftOf="@id/btn_login"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textColor="#999999"
                android:textSize="14sp"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_custom_host"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/use_custom_host"
            android:textColor="@color/primary_text_light"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_example"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:textColor="#EEEEEE"
            android:visibility="gone"/>

    </LinearLayout>

    <com.apkdv.leanote.widget.OwlView
        android:id="@+id/owl_view"
        android:layout_width="175dp"
        android:layout_height="107dp"
        android:layout_above="@id/ll_login_pane"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
